Prevent timeout for comoser command.

--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,10 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "serve": "symfony server:start --port=3000 --no-tls"
+        "serve": [
+            "Composer\\Config::disableProcessTimeout",
+            "symfony server:start --port=3000 --no-tls"
+        ]
     },
     "conflict": {
         "symfony/symfony": "*"
