Add unit test command to composer.json.

--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,8 @@
         "serve": [
             "Composer\\Config::disableProcessTimeout",
             "symfony server:start --port=3000 --no-tls"
-        ]
+        ],
+        "unit": "bin/phpunit --testdox tests/unit/"
     },
     "conflict": {
         "symfony/symfony": "*"
