Parameterize weather API app id.

--- a/.env
+++ b/.env
@@ -32,3 +32,5 @@ APP_SECRET=b129e15eb29df08db1b90d60a8354c21
 # DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data.db
 ###< doctrine/doctrine-bundle ###
+
+OPEN_WEATHER_MAP_APP_ID=
