--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\WeatherApiClient:
+        arguments:
+            $openWeatherMapAppId: '%env(resolve:OPEN_WEATHER_MAP_APP_ID)%'
