--- a/composer.json
+++ b/composer.json
@@ -91,10 +91,9 @@
         ],
         "drop-test-db": "bin/console doctrine:schema:drop --force --env=test",
         "create-test-db": "bin/console doctrine:schema:create --env=test",
-        "reload-test-db": "composer drop-test-db && composer create-test-db",
-        "test": "bin/phpunit --testdox tests",
-        "test-unit": "bin/phpunit --testdox tests/unit",
-        "test-functional": "bin/phpunit --testdox tests/functional"
+        "test": "bin/phpunit --testdox",
+        "test-unit": "bin/phpunit --testdox --testsuite Unit",
+        "test-functional": "bin/phpunit --testdox --testsuite Functional"
     },
     "conflict": {
         "symfony/symfony": "*"
